{
  "sourceLanguage" : "en",
  "strings" : {
    "%@ has changed since. Move it to the Trash anyway?" : {
      "extractionState" : "stale",
      "localizations" : {
        "en-AU" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ has changed since. Move it to the Bin anyway?"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ has changed since. Move it to the Bin anyway?"
          }
        },
        "en-IE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ has changed since. Move it to the Bin anyway?"
          }
        },
        "en-IN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ has changed since. Move it to the Bin anyway?"
          }
        },
        "en-NZ" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ has changed since. Move it to the Bin anyway?"
          }
        }
      }
    },
    "%@ Steps" : {
      "comment" : "A picker option that lets the user choose the number of steps to keep in the undo history.",
      "isCommentAutoGenerated" : true
    },
    "%lld items have changed since. Move them to the Trash anyway?" : {
      "extractionState" : "stale",
      "localizations" : {
        "en-AU" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%lld items have changed since. Move them to the Bin anyway?"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%lld items have changed since. Move them to the Bin anyway?"
          }
        },
        "en-IE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%lld items have changed since. Move them to the Bin anyway?"
          }
        },
        "en-IN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%lld items have changed since. Move them to the Bin anyway?"
          }
        },
        "en-NZ" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%lld items have changed since. Move them to the Bin anyway?"
          }
        }
      }
    },
    "Accent Color" : {
      "extractionState" : "stale",
      "localizations" : {
        "en-AU" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Accent Colour"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Accent Colour"
          }
        },
        "en-IE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Accent Colour"
          }
        },
        "en-IN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Accent Colour"
          }
        },
        "en-NZ" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Accent Colour"
          }
        }
      }
    },
    "Chosen" : {
      "comment" : "The label for the color that the user has selected.",
      "isCommentAutoGenerated" : true
    },
    "Copy" : {
      "comment" : "A button that deletes a file.",
      "isCommentAutoGenerated" : true
    },
    "Date and Time" : {

    },
    "Delete" : {

    },
    "Delete Permanently" : {
      "comment" : "A button that deletes a file permanently.",
      "isCommentAutoGenerated" : true
    },
    "Dialect" : {
      "comment" : "The name of the app.",
      "isCommentAutoGenerated" : true
    },
    "Downloads" : {
      "comment" : "A label displayed in the gauge of the Downloads complication.",
      "isCommentAutoGenerated" : true
    },
    "Empty Trash After" : {
      "extractionState" : "stale",
      "localizations" : {
        "en-AU" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Empty Bin After"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Empty Bin After"
          }
        },
        "en-IE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Empty Bin After"
          }
        },
        "en-IN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Empty Bin After"
          }
        },
        "en-NZ" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Empty Bin After"
          }
        }
      }
    },
    "Extended" : {
      "comment" : "A button that opens a screen with more information.",
      "isCommentAutoGenerated" : true
    },
    "Files" : {
      "comment" : "The name of the root folder.",
      "isCommentAutoGenerated" : true
    },
    "Files with these extensions are treated as text." : {
      "comment" : "A footer for the list of text extensions.",
      "isCommentAutoGenerated" : true
    },
    "Hex" : {
      "comment" : "A heading for the hex field.",
      "isCommentAutoGenerated" : true
    },
    "More" : {
      "comment" : "A button that opens a menu.",
      "isCommentAutoGenerated" : true
    },
    "More vivid than sRGB hex can represent." : {
      "comment" : "A description of the color difference between the",
      "isCommentAutoGenerated" : true
    },
    "New File" : {
      "comment" : "The title of the New File screen.",
      "isCommentAutoGenerated" : true
    },
    "New Folder" : {
      "comment" : "The title of a screen for creating a new folder.",
      "isCommentAutoGenerated" : true
    },
    "New Session" : {
      "comment" : "The title of a screen for creating a new session.",
      "isCommentAutoGenerated" : true
    },
    "No viewer yet" : {
      "comment" : "A caption displayed under the name of a file.",
      "isCommentAutoGenerated" : true
    },
    "None" : {
      "comment" : "A label displayed when a file or directory has no",
      "isCommentAutoGenerated" : true
    },
    "Other…" : {
      "comment" : "A button to add a new file extension.",
      "isCommentAutoGenerated" : true
    },
    "Relative" : {
      "comment" : "A description of how the modified date is displayed.",
      "isCommentAutoGenerated" : true
    },
    "Rename" : {
      "comment" : "A button title for renaming a file.",
      "isCommentAutoGenerated" : true
    },
    "Restore" : {
      "comment" : "A button that restores a deleted file.",
      "isCommentAutoGenerated" : true
    },
    "Select" : {
      "comment" : "A button that toggles selection.",
      "isCommentAutoGenerated" : true
    },
    "The clipboard is empty" : {
      "comment" : "The text that appears when the clipboard is empty.",
      "isCommentAutoGenerated" : true
    },
    "The credits could not be loaded." : {
      "comment" : "A message displayed when the credits can't be loaded.",
      "isCommentAutoGenerated" : true
    },
    "The Trash is empty" : {
      "localizations" : {
        "en-AU" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The Bin is empty"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The Bin is empty"
          }
        },
        "en-IE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The Bin is empty"
          }
        },
        "en-IN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The Bin is empty"
          }
        },
        "en-NZ" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The Bin is empty"
          }
        }
      }
    },
    "This can't be redone, as %@ is no longer in the Trash." : {
      "extractionState" : "stale",
      "localizations" : {
        "en-AU" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This can't be redone, as %@ is no longer in the Bin."
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This can't be redone, as %@ is no longer in the Bin."
          }
        },
        "en-IE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This can't be redone, as %@ is no longer in the Bin."
          }
        },
        "en-IN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This can't be redone, as %@ is no longer in the Bin."
          }
        },
        "en-NZ" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This can't be redone, as %@ is no longer in the Bin."
          }
        }
      }
    },
    "This can't be undone, as %@ is no longer in the Trash." : {
      "extractionState" : "stale",
      "localizations" : {
        "en-AU" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This can't be undone, as %@ is no longer in the Bin."
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This can't be undone, as %@ is no longer in the Bin."
          }
        },
        "en-IE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This can't be undone, as %@ is no longer in the Bin."
          }
        },
        "en-IN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This can't be undone, as %@ is no longer in the Bin."
          }
        },
        "en-NZ" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "This can't be undone, as %@ is no longer in the Bin."
          }
        }
      }
    },
    "This can't be undone." : {
      "comment" : "A message that appears when you restore an item from the trash.",
      "isCommentAutoGenerated" : true
    },
    "This item no longer exists" : {

    },
    "Trash" : {
      "localizations" : {
        "en-AU" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bin"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bin"
          }
        },
        "en-IE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bin"
          }
        },
        "en-IN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bin"
          }
        },
        "en-NZ" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bin"
          }
        }
      }
    },
    "Use a hex color like %@" : {
      "localizations" : {
        "en-AU" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Use a hex colour like %@"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Use a hex colour like %@"
          }
        },
        "en-IE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Use a hex colour like %@"
          }
        },
        "en-IN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Use a hex colour like %@"
          }
        },
        "en-NZ" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Use a hex colour like %@"
          }
        }
      }
    }
  },
  "version" : "1.1"
}